--- a/css/index.css
+++ b/css/index.css
@@ -14,55 +14,60 @@ header {
       min-height:100vh;
 }
 header nav{
-    padding: 20px 40px 20px 10px;
+    padding: 20px 40px 20px 100px;
     align-items: center;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    border-bottom: 1px solid #1E1E1E;
 
 }
 header nav .nav-right{
- align-items: center;
- justify-content: space-between;
- float: left;
- width: 50%;
-display: flex;
-padding: 20px 40px 20px 100px;
-font-family: Arial, Helvetica, sans-serif;
+    align-items: center;
+    justify-content: space-between;
+    display: flex;
+    font-family: Arial, Helvetica, sans-serif;
 
 }
 header nav .nav-right a{
  text-decoration: none;   
  color: #ffffff;
+ margin-right: 30px;
+ position: relative;
 }
-header nav .logo{
-  width: 20%;
-  float: left;
+header nav .nav-right a:after{
+    content:" ";
+    position: absolute;
+    left: 0;
+    bottom: -32px;
+    width: 0;
+    height: 2px;
+    background: white;
+    transition: width .3s ease-in-out;
 }
-header nav .search{
-float: right;
-padding: 20px 80px 10px 60px;
-background-color: #1E1E1E;
-border-radius: 2500px;
+header nav .nav-right a:hover:after{
+    width: 70%;
+}
+header nav .nav-right a.active:after{
+    width: 90%;
+}
+header nav .search > div{
+background: #1E1E1E;
+display: flex;
+align-items: center;
+padding: 10px 15px;
+border-radius: 50px;
+}
 
-}
-.butt{
-    background-color: green;
-    text-align: center;
-    border-radius: 5px;
-    margin-left: 50px;
+header nav .search > div input{
+    background: transparent;
+    border: none;
+    outline: none;
     color: white;
+    font-size: 16px;
 }
-.bu{
-    background-color: blue;
-    text-align: center;
-    border-radius: 5px;
-    margin-left: 50px;
-    color: white;
-}
-.tu{
-    background-color: red;
-    text-align: center;
-    border-radius: 5px;
-    margin-left: 50px;
-    color: white;
+
+header nav .search > div img{
+    padding-right: 16px;
 }
 .ani{
     animation-name: move ;
@@ -89,8 +94,3 @@ border-radius: 2500px;
     from{transform: rotateY(0deg);}
    to{transform: rotateY(60deg);}
 } */
-.green{
-    height: 50px;
-    translate: -50%;
-    background-color: green;
-}
