--- a/css/t.css
+++ b/css/t.css
@@ -1,4 +1,4 @@
-.abc{
+/* .abc{
     background-color: yellow;
     height: 150px;
     width: 150px;
@@ -9,4 +9,4 @@
     left: 50%; */
     position: absolute;
     transform: translate(0%,0%);
-}
+} */
